--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
   - name: Publications
     url: '#featured'
     weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
+  # - name: Projects
+  #   url: '#projects'
+  #   weight: 30
   - name: Contact
     url: '#contact'
     weight: 40
